<resources>
    <string name="todo">Container</string>
    <string name="Vidokezo">Vidokezo</string>
    <string name="toka">Toka</string>
    <string name="profile">Profile</string>
    <string name="kuhusu">Kuhusu</string>
    <string name="takwimu">Takwimu</string>
    <string name="historia_ya_miamala">Historia ya miamala</string>
    <string name="app_name">SmartWakala</string>
    <string name="need_help_text">Msaada?</string>
    <string name="choose_network">CHAGUA MTANDAO</string>
    <string name="your_details_from_MNO">TAARIFA ZA LAINI YAKO</string>
    <string name="continue_to">Endelea</string>
    <string name="i_confirm">Endelea</string>
    <string name="register">Jisajili</string>
    <string name="ok">Sawa</string>
    <string name="login">Ingia</string>
    <string name="code_sent_to_users_phone">Ingiza namba</string>
    <string name="password_reset_code_sent_to_users_phone">Kutoka kwenye SMS</string>
    <string name="password_reset_code_sent_to_users_email">Kutoka kwenye Email</string>
    <string name="endelea">Endelea</string>
    <string name="confirm_number">Hakiki namba</string>
    <string name="confirm_account">Hakiki Akaunti</string>
    <string name="submit_users_code">Wasilisha namba</string>
    <string name="submit_users_pin">Wasilisha PIN</string>
    <string name="submit_customer_number">Wasilisha namba</string>
    <string name="submit_users_new_password">Wasilisha Ombi</string>
    <string name="submit_users_amount_request">Wasilisha Ombi</string>
    <string name="submit_users_reset_password_email">Wasilisha Ombi</string>
    <string name="forgot_password">Nimesahau neno-siri langu!</string>
    <string name="register_here">Mtumiaji mpya? Jisajili hapa!</string>
    <string name="chagua_aina_ya_muamala">Chagua aina ya huduma</string>
    <string name="numbers">numbers</string>
    <string name="chagua_lugha">Chagua lugha</string>
    <string name="tigopesa_uliza_salio_head">Uliza salio</string>
    <string name="tigopesa_akaunti_yangu_head">Akaunti yako</string>
    <string name="tigopesa_wakala_kutoa_pesa_head">Toa pesa</string>
    <string name="tigopesa_number_to_be_registered">Ingiza namba ya TigoPesa</string>
    <string name="user_account_to_be_verified">Username</string>
    <string name="airtelmoney_number_to_be_registered">Ingiza namba ya AirtelMoney</string>
    <string name="halopesa_number_to_be_registered">Ingiza namba ya HaloPesa</string>
    <string name="mpesa_number_to_be_registered">Ingiza namba ya M-Pesa</string>
    <string name="tpesa_number_to_be_registered">Ingiza namba ya T-Pesa</string>
    <string name="ezypesa_number_to_be_registered">Ingiza namba ya EzyMoney</string>
    <string name="user_login_username">Username</string>
    <string name="user_login_password">Neno-siri</string>
    <string name="user_register_username">Username</string>
    <string name="user_register_password">Neno-siri</string>
    <string name="confirm_user_register_password">Rudia Neno-siri</string>
    <string name="user_reset_password">Neno-siri jipya</string>
    <string name="confirm_user_reset_password">Rudia neno-siri jipya</string>
    <string name="user_register_email">Barua pepe</string>
    <string name="user_register_contact">Simu ya mawasiliano</string>
    <string name="is_information_correct">Je, taarifa hizo ni sahihi kuhusu wewe?</string>
    <string name="read_terms_and_conditions">Soma vigezo na masharti!</string>
    <string name="enter_login_credentials">JAZA TAARIFA ZAKO</string>
    <string name="user_agreement_to_privacy_policy">Kwa kubonyeza kitufe cha kujisajili, 
        unakubali vigezo na masharti ya kutumia App hii.</string>
    <string name="two_factor_authentication_notification">Tumekutumia SMS kwenye namba yako ya wakala, yenye tarakimu sita.
        Tafadhali ingiza namba hiyo hapo chini ili kukamilisha usajili wako.</string>
    <string name="password_reset_action_notification">Tafadhali ingia kwenye barua pepe yako,
        tumekutumia kiungo cha kukuwezesha kuunda neno-siri jipya.</string>
    <string name="password_reset_notification">Tafadhali unda neno-siri jipya, yenye mchanganyiko wa herufi, tarakimu pamoja na alama nyinginezo
        kwa pamoja visipungue nane (8) kwa ajili ya usalama zaidi a akaunti yako.</string>
    <string name="yes">Ndiyo</string>
    <string name="no">Hapana</string>
    <string name="choice_1">Chaguo no. 1</string>
    <string name="choice_2">Chaguo no. 2</string>
    <string name="choice_3">Chaguo no. 3</string>
    <string name="choice_4">Chaguo no. 4</string>
    <string name="choice_5">Chaguo no. 5</string>
    <string name="choice_6">Chaguo no. 6</string>
    <string name="choice_7">Chaguo no. 7</string>
    <string name="choice_8">Chaguo no. 8</string>
    <string name="choice_9">Chaguo no. 9</string>
    <string name="first_name_label">Jina la kwanza:</string>
    <string name="middle_name_label">Jina la kati:</string>
    <string name="last_name_label">Jina la ukoo:</string>
    <string name="agent_birth_date_label">Kuzaliwa:</string>
    <string name="id_no._label">Kitambulisho No:</string>
    <string name="SIM_no._label">Laini No:</string>
    <string name="agent_code_label">Code No:</string>
    <string name="tin_no._label">TIN No:</string>
    <string name="licence_no._label">Leseni No:</string>
    <string name="agent_business_region_label">Mkoa:</string>
    <string name="about_smartwakala_app_text">Kuhusu SmartWakala App</string>
    <string name="about_smartwakala_app_note">Karibu kwenye App ya SmartWakala. App hii ni maalum
    kwa ajili ya kuwasaidia mawakala wa mitandao ya simu nchini Tanzania kufanya miamala yao kwa
    urahsi na ufanisi. Miamala yote itafanyika kupitia App hii pekee bila uhitaji wa kuwa na simu nyingine ya ziada.</string>
    <string name="available_services_text">Huduma za SmartWakala</string>
    <string name="available_services_note">Kufanya miamala, Kupata taarifa za miamala na Kupata takwimu za miamala, na Kujua mwenendo wa biashara.</string>
    <string name="how_to_register_text">Jinsi ya Kujisajili</string>
    <string name="how_to_register_note">Fuata hatua hizi chache na rahisi za kujisajili ili uweze kunufaika na huduma za SmartWakala-App.
        Kwenye "Username", unda ki-jina chako cha kipekee ambacho kitakutambulisha wewe na kukutofautisha na mawakala wengine.
        Kwenye "Neno-siri", unda neno-siri lako litakalokuwa kama ufunguo wa kuingilia kwenye mfumo huu wa SmartWakala.
        Hakikisha kwamba neno-siri lako ina mchanganyiko wa herufi, tarakimu pamoja na alama nyinginezo kwa pamoja visipungue nane (8)
        kwa ajili ya usalama zaidi wa akaunti yako. Tafadhali litunze neno-siri lako na usimwambie mtu mwingine yeyote usiemwamini.
        Ama kama wewe tayari umeshajisajili, tafadhali ingiza taarifa zako kwa usahihi ili kuingia kwenye mfumo huu.</string>
    <string name="congratulations">Hongera..!!</string>
    <string name="you_are_successfully_registered">Umefanikiwa kujisajili katika mfumo wa
    SmartWakala App. Tafadhali ingia kwenye barua pepe yako, tumekutumia kiungo cha kukuwezesha kuthibitisha na kukamilisha usajili wako.</string>
    <string name="you_have_successfully_reset_your_password">Umefanikiwa kuunda nen0-siri lako jipya.
        Tafadhali bofya kitufe hapo chini ili ujaze taarifa zako za kuingilia kwenye mfumo.</string>
    <string name="weka_pesa">Weka pesa</string>
    <string name="toa_pesa">Toa pesa</string>
    <string name="uza_muda_wa_maongezi_na_vifurushi">Uza muda wa maongezi na vifurushi</string>
    <string name="uza_bidhaa">Uza bidhaa</string>
    <string name="cash_drop">Cash drop</string>
    <string name="akaunti_yangu">Akaunti yangu</string>
    <string name="rejesha_muamala">Rejesha muamala</string>
    <string name="ingiza_namba_ya_simu">Namba ya simu</string>
    <string name="rudi_nyuma">Rudi nyuma</string>
    <string name="menyu_kuu">Menyu kuu</string>
    <string name="toa_pesa_kwa_meseji">Toa pesa kwa meseji</string>
    <string name="toa_pesa_kwa_wakala">Kutoka kwa wakala</string>
    <string name="toa_pesa_kwa_wakala_mkuu">Kutoka kwa wakala mkuu</string>
    <string name="toa_pesa_kutoka_benki">Kutoka benki</string>
    <string name="uza_muda_wa_maongezi">Uza muda wa maongezi</string>
    <string name="uza_yatosha_na_smatika_intaneti">Uza Yatosha na SMATIKA intaneti</string>
    <string name="uza_luku">Uza LUKU</string>
    <string name="fanya_malipo">Fanya malipo</string>
    <string name="huduma_nyingine">Huduma nyingine</string>
    <string name="ingiza_namba_ya_biashara">Namba ya biashara</string>
    <string name="ingiza_namba_ya_mtumiaji">Namba ya mtumiaji</string>
    <string name="timiza_mikopo">TIMIZA-MIKOPO</string>
    <string name="usajili">Usajili</string>
    <string name="namba_yangu_ya_siri">Namba yangu ya siri</string>
    <string name="angalia_salio">Angalia salio</string>
    <string name="benki">Benki</string>
    <string name="taarifa">Taarifa</string>
    <string name="change_to_english">Change to English</string>
    <string name="kuunganisha_nfc_card">Kuunganisha NFC-Card</string>
    <string name="angalia_kamisheni">Angalia kamisheni</string>
    <string name="tuma_tena_luku">Tuma tena token ya LUKU</string>
    <string name="ingiza_namba_ya_muamala">Namba ya muamala</string>
    <string name="uliza_salio">Uliza salio</string>
    <string name="toa_kwa_asiyesajiliwa">Toa kwa asiyesajiliwa</string>
    <string name="wakala_kutoa_pesa">Wakala kutoa pesa</string>
    <string name="muda_wa_maongezi_epod">Muda wa maongezi-EPOD</string>
    <string name="toa_pesa_benki">Toa pesa benki</string>
    <string name="taarifa_fupi">Taarifa fupi</string>
    <string name="ingiza_namba_ya_siri">Ingiza PIN yako</string>
    <string name="ingiza_namba">Ingiza namba</string>
    <string name="ingiza_namba_ya_simu_ya_mteja">Namba ya mteja</string>
    <string name="ingiza_namba_ya_simu_ya_mpokeaji">Namba ya mpokeaji</string>
    <string name="ingiza_namba_ya_wakala">Namba ya wakala</string>
    <string name="ingiza_namba_ya_wakala_mkuu">Namba ya wakala mkuu</string>
    <string name="huduma_kwa_wateja">Huduma kwa wateja</string>
    <string name="wasiliama_na_huduma_kwa_wateja">Tafadhali, wasiliana na huduma kwa wateja!</string>
    <string name="namba_ya_siri_ya_zamani">PIN ya zamani</string>
    <string name="badili_lugha">Badili lugha</string>
    <string name="kiswahili">Kiswahili</string>
    <string name="english">English</string>
    <string name="chagua_benki">Chagua benki</string>
    <string name="nmb">NMB Bank</string>
    <string name="crdb">CRDB Bank</string>
    <string name="ingiza_kiasi">Ingiza kiasi</string>
    <string name="badili_pin">Badili PIN</string>
    <string name="user_login_email">Barua pepe</string>
    <string name="dashboard_yangu">DASHBOARD</string>
    <string name="mapato">Mapato</string>
    <string name="wateja">Wateja</string>
    <string name="vidokezo">Vidokezo</string>
    <string name="ondoka">Ondoka</string>
    <string name="maoni">Maoni</string>
    <string name="settings">Settings</string>
    <string name="miamala">Miamala</string>
    <string name="profile_yangu">WASIFU WANGU</string>
    <string name="email_yagu">Email yagu:</string>
    <string name="namba_yangu_ya_simu">Namba ya simu:</string>
    <string name="username_yangu">Username yangu:</string>
    <string name="barua_pepe">Barua pepe:</string>
    <string name="menu">Menu</string>
    <string name="jina_kamili">Jina kamili:</string>
    <string name="nimezaliwa">Nimezaliwa:</string>
    <string name="sanduku_la_maoni">SANDUKU LA MAONI</string>
    <string name="andika_maoni_yako">Andika maoni yako..</string>
    <string name="tuma_maoni">TUMA MAONI</string>
    <string name="hint">Endapo App yako imeshindwa kufunguka jaribu kufanya yafuatayo</string>
    <string name="aplikeshen_kukwama">1: Aplikeshen inagoma?</string>
    <string name="aplikeshen_kushindwa_kuleta_matokeo">2: Aplikeshen haileti matokeo?</string>
</resources>