<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smartwakala_background"
    android:fillViewport="true"
    tools:context=".AirtelMoneyAkauntiYanguActivity">

    <ScrollView
        android:id="@+id/airtelmoney_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/airtelmoney_cash_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/airtelmoney_cash_drop_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/airtel_timiza_mikopo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timiza_mikopo"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/usajili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/usajili"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_namba_yangu_ya_siri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/namba_yangu_ya_siri"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_angalia_salio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/angalia_salio"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_benki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/benki"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_akaunti_yangu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/akaunti_yangu"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_taarifa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/taarifa"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_change_to_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/change_to_english"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_kuunganisha_nfc_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kuunganisha_nfc_card"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_angalia_kamisheni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/angalia_kamisheni"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/airtel_tuma_tena_luku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tuma_tena_luku"
                    android:textSize="18sp"/>

            </RadioGroup>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/round_edges_button"
                android:text="@string/continue_to"
                android:textSize="15sp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>














