<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smartwakala_background"
    android:fillViewport="true"
    tools:context=".TigoPesaMainActivity">

    <ScrollView
        android:id="@+id/tigopesa_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/tigopesa_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tigopesa_type_of_transaction_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/chagua_aina_ya_muamala"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

<!--            <Spinner-->
<!--                android:id="@+id/numbers_spiner"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="13dp"-->
<!--                android:layout_marginStart="48dp"-->
<!--                android:layout_marginLeft="48dp"-->
<!--                android:layout_marginEnd="24dp"-->
<!--                android:layout_marginRight="24dp"-->
<!--                android:contentDescription="@string/numbers"-->
<!--                android:duplicateParentState="false"-->
<!--                android:entries="@array/numbers"-->
<!--                android:spinnerMode="dropdown" />-->

            <RadioGroup
                android:id="@+id/tigopesa_type_of_transaction_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/tigopesa_uliza_salio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/uliza_salio"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_usajili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/usajili"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_weka_pesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/weka_pesa"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_toa_kwa_asiyesajiliwa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/toa_kwa_asiyesajiliwa"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_wakala_kutoa_pesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/wakala_kutoa_pesa"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_muda_wa_maongezi_epod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/muda_wa_maongezi_epod"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_akaunti_yangu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/akaunti_yangu"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/tigopesa_toa_pesa_benki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/toa_pesa_benki"
                    android:textSize="18sp"/>

            </RadioGroup>

            <Button
                android:id="@+id/tigopesa_main_menu_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/round_edges_button"
                android:text="@string/continue_to"
                android:textSize="15sp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>