<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lukusmart_background2"
    android:fillViewport="true"
    tools:context=".TwoFactorAuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/two_factor_authentication_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:gravity="center_horizontal"
            android:text="@string/two_factor_authentication_notification"
            android:textColor="@color/colorWarning"
            android:textColorLink="#070707"
            android:textSize="13sp"
            tools:text="@string/two_factor_authentication_notification" />

        <EditText
            android:id="@+id/code_sent_to_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/code_sent_to_users_phone"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:text="@string/code_sent_to_users_phone" />

        <Button
            android:id="@+id/submit_users_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round_edges_button"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="@string/submit_users_code"/>
    </LinearLayout>
</ScrollView>